kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asis-safety-service
  namespace: asis-safety
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: asis-safety
