kubernetes/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: asis-safety-netpol
  namespace: asis-safety
spec:
  podSelector:
    matchLabels:
      app: asis-safety
  policyTypes:
  - Ingress
  egress:
  - to: []
